--- a/app/src/main/res/drawable/olympic_torch_svgrepo_com.xml
+++ b/app/src/main/res/drawable/olympic_torch_svgrepo_com.xml
@@ -1,11 +1,11 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="800dp"
-    android:height="800dp"
+    android:width="200dp"
+    android:height="200dp"
     android:viewportWidth="494.44"
     android:viewportHeight="494.44">
   <path
       android:pathData="M324.42,283.63h1.79c9.11,0 16.48,-7.38 16.48,-16.48c0,-9.1 -7.37,-16.48 -16.48,-16.48H168.25c-9.11,0 -16.48,7.38 -16.48,16.48c0,9.1 7.37,16.48 16.48,16.48h1.79c4.52,21.29 17.7,39.25 35.6,50.4l14.81,160.41h53.56l14.81,-160.41C306.72,322.88 319.9,304.92 324.42,283.63z"
-      android:fillColor="#11FB1A"/>
+      android:fillColor="@color/blue_800"/>
   <path
       android:pathData="M239.52,223.81c33.38,0 57.23,-21.25 69.71,-52.21c21.63,-53.73 -17.51,-159.66 -63.48,-159.66c18.15,25.75 25.78,69.01 -9.66,105.07c-6.44,-12.02 -3.51,-29.64 -4.12,-44.83c-28.33,12.9 -52.89,45.7 -52.89,91.19C179.08,196.76 206.14,223.81 239.52,223.81z"
       android:fillColor="#FF0000"/>
@@ -14,68 +14,68 @@
       android:fillColor="#FF0000"/>
   <path
       android:pathData="M52.4,169.32c6.86,1.42 14.04,-5.04 16.87,-14.45c2.29,-9.3 7.47,-35.99 1.66,-39.19c-6.58,-3.33 -23.19,21.18 -25.86,31.92C41.84,158.1 45.57,167.91 52.4,169.32z"
-      android:fillColor="#11FB1A"/>
+      android:fillColor="@color/blue_800"/>
   <path
       android:pathData="M53.59,216.17c4.76,7.11 12.78,6.86 17.86,0.63c4.84,-6.57 16.05,-26.33 12.68,-33.15c-3.59,-7.34 -22.6,0.9 -28.41,7.5C49.79,197.38 48.79,209.11 53.59,216.17z"
-      android:fillColor="#11FB1A"/>
+      android:fillColor="@color/blue_800"/>
   <path
       android:pathData="M200.99,399.34c-6.98,-3.97 -22.76,7.4 -26.85,13.09c-3.99,5.73 -0.68,14.9 8.03,19.88c8.68,4.94 18.53,3.25 21.42,-3.11C206.4,422.77 207.94,403.34 200.99,399.34z"
-      android:fillColor="#11FB1A"/>
+      android:fillColor="@color/blue_800"/>
   <path
       android:pathData="M60.57,260.58c-3.94,7.39 -1.69,18.54 4.8,23.81c6.52,5.3 14.13,2.78 17.35,-4.39c2.49,-7.81 12.46,-38.27 7.92,-43.39C85.23,230.47 64.08,252.5 60.57,260.58z"
-      android:fillColor="#11FB1A"/>
+      android:fillColor="@color/blue_800"/>
   <path
       android:pathData="M96.29,349.1c8.95,3.56 16.5,-1.82 17.69,-10.75c0.05,-9.45 1.98,-45.28 -4.46,-49.17c-7.87,-4.97 -24.96,25.33 -26.22,35.49C81.21,334.02 87.36,345.6 96.29,349.1z"
-      android:fillColor="#11FB1A"/>
+      android:fillColor="@color/blue_800"/>
   <path
       android:pathData="M147.13,407.5c11.17,0.69 17.22,-7.98 15.19,-18.08c-3.77,-10.38 -13.61,-49.59 -21.6,-51.57c-10.22,-2.83 -19.14,35.72 -16.74,47.37C124.95,396.2 136.03,406.87 147.13,407.5z"
-      android:fillColor="#11FB1A"/>
+      android:fillColor="@color/blue_800"/>
   <path
       android:pathData="M39.28,215.69c5.13,-7.15 6.1,-18.49 2.29,-26.51c-4.06,-7.65 -17.82,-25.14 -24.19,-18.25c-6.89,7.36 -1.13,36.49 4.04,44.13C26.16,223.06 34.18,222.77 39.28,215.69z"
-      android:fillColor="#11FB1A"/>
+      android:fillColor="@color/blue_800"/>
   <path
       android:pathData="M166.98,459.02c3.17,-0.39 6.21,-1.95 8.35,-4.64c4.38,-5.47 3.51,-13.41 -1.96,-17.77c0,0 -3.73,-3.03 -10.27,-8.24c-23.85,-19.18 -14.16,-10.11 -41.49,-37.84c-15.9,-14.32 -36.01,-48.62 -46,-65.1c-29.52,-59.21 -28.31,-145.26 -28.31,-145.26s-8.77,78.66 16.89,150.68c8.19,16.49 26.85,55.26 42.65,72.27c26.91,32.31 18.33,22.73 49.54,52.21c-5.86,-1 -11.06,-0.06 -13.58,3.58c-4.06,5.65 -6.01,26.57 5.31,33.04c11.36,6.47 28.68,-5.71 31.47,-12.14C182.48,473.48 176.54,464.5 166.98,459.02z"
-      android:fillColor="#11FB1A"/>
+      android:fillColor="@color/blue_800"/>
   <path
       android:pathData="M42.87,290.07c2.9,-8.31 0.68,-19.46 -5.25,-26.06c-6.31,-5.73 -30.53,-30.39 -34.86,-22.44c-5.31,9.26 15.29,47.45 22.76,52.89C32.31,300.88 39.96,298.37 42.87,290.07z"
-      android:fillColor="#11FB1A"/>
+      android:fillColor="@color/blue_800"/>
   <path
       android:pathData="M70.46,364.83c0.34,-10.3 -5.89,-22.08 -14.61,-27.54c-8.92,-4.28 -43.68,-24.79 -46.03,-14.48c-3.2,12.25 32.56,49.28 42.97,52.82C62.59,380.57 70.14,375.16 70.46,364.83z"
-      android:fillColor="#11FB1A"/>
+      android:fillColor="@color/blue_800"/>
   <path
       android:pathData="M100.7,406.35c-11.3,-1.51 -56.4,-13.09 -55.46,-0.97c0.47,14.9 53.44,44.24 66.49,44.26c12.78,2 18.83,-6.68 15.19,-18.06C123.25,420.13 112.18,409.46 100.7,406.35z"
-      android:fillColor="#11FB1A"/>
+      android:fillColor="@color/blue_800"/>
   <path
       android:pathData="M387.61,403.12c15.77,-16.99 34.44,-55.77 42.65,-72.27c25.64,-72.03 16.88,-150.68 16.88,-150.68s1.19,86.04 -28.31,145.26c-9.99,16.48 -30.39,51.07 -46.02,65.1c-28.13,28.55 -13.89,15.15 -51.73,46.08c-5.47,4.36 -6.37,12.3 -2,17.77c2.14,2.69 5.18,4.25 8.37,4.64c-9.58,5.5 -15.5,14.47 -12.59,20.79c2.8,6.42 20.08,18.6 31.45,12.14c11.33,-6.47 9.4,-27.39 5.33,-33.04c-2.53,-3.64 -7.74,-4.58 -13.6,-3.58c0.02,-0.02 26.88,-25.43 26.9,-25.44C367.23,427.6 385.53,405.61 387.61,403.12z"
-      android:fillColor="#11FB1A"/>
+      android:fillColor="@color/blue_800"/>
   <path
       android:pathData="M442.02,169.32c6.82,-1.42 10.56,-11.22 7.34,-21.73c-2.67,-10.74 -19.28,-35.25 -25.85,-31.92c-5.82,3.2 -0.64,29.89 1.64,39.19C428.01,164.29 435.17,170.74 442.02,169.32z"
-      android:fillColor="#11FB1A"/>
+      android:fillColor="@color/blue_800"/>
   <path
       android:pathData="M440.85,216.17c4.78,-7.07 3.78,-18.8 -2.14,-25.03c-5.81,-6.6 -24.82,-14.84 -28.43,-7.5c-3.35,6.82 7.86,26.59 12.7,33.15C428.09,223.03 436.09,223.29 440.85,216.17z"
-      android:fillColor="#11FB1A"/>
+      android:fillColor="@color/blue_800"/>
   <path
       android:pathData="M320.28,412.42c-4.05,-5.68 -19.86,-17.06 -26.83,-13.09c-6.97,4.01 -5.42,23.43 -2.62,29.85c2.9,6.36 12.74,8.05 21.44,3.11C320.96,427.33 324.27,418.15 320.28,412.42z"
-      android:fillColor="#11FB1A"/>
+      android:fillColor="@color/blue_800"/>
   <path
       android:pathData="M429.05,284.39c6.5,-5.26 8.76,-16.42 4.8,-23.81c-3.49,-8.08 -24.64,-30.11 -30.05,-23.98c-4.55,5.12 5.43,35.58 7.9,43.39C414.92,287.17 422.55,289.68 429.05,284.39z"
-      android:fillColor="#11FB1A"/>
+      android:fillColor="@color/blue_800"/>
   <path
       android:pathData="M411.14,324.67c-1.27,-10.16 -18.36,-40.46 -26.22,-35.49c-6.44,3.89 -4.51,39.72 -4.48,49.17C383.55,361.67 416.16,346.95 411.14,324.67z"
-      android:fillColor="#11FB1A"/>
+      android:fillColor="@color/blue_800"/>
   <path
       android:pathData="M370.45,385.22c2.4,-11.65 -6.52,-50.2 -16.75,-47.37c-7.95,1.98 -17.84,41.19 -21.6,51.57C326.69,416.31 368.15,411.31 370.45,385.22z"
-      android:fillColor="#11FB1A"/>
+      android:fillColor="@color/blue_800"/>
   <path
       android:pathData="M473.02,215.06c5.15,-7.64 10.93,-36.78 4.02,-44.13c-6.37,-6.89 -20.12,10.61 -24.17,18.25c-3.83,8.02 -2.86,19.36 2.29,26.51C460.26,222.77 468.28,223.06 473.02,215.06z"
-      android:fillColor="#11FB1A"/>
+      android:fillColor="@color/blue_800"/>
   <path
       android:pathData="M451.57,290.07c2.91,8.3 10.54,10.82 17.33,4.39c7.48,-5.44 28.09,-43.63 22.77,-52.89c-4.33,-7.95 -28.55,16.71 -34.86,22.44C450.88,270.61 448.66,281.76 451.57,290.07z"
-      android:fillColor="#11FB1A"/>
+      android:fillColor="@color/blue_800"/>
   <path
       android:pathData="M438.58,337.29c-21.09,13.19 -18.49,49.21 3.08,38.34c10.41,-3.54 46.17,-40.58 42.97,-52.82C482.28,312.5 447.51,333.01 438.58,337.29z"
-      android:fillColor="#11FB1A"/>
+      android:fillColor="@color/blue_800"/>
   <path
       android:pathData="M393.74,406.35c-11.49,3.11 -22.57,13.78 -26.23,25.24c-3.64,11.38 2.43,20.06 15.21,18.06c13.05,-0.01 66.01,-29.36 66.49,-44.26C450.14,393.27 405.04,404.84 393.74,406.35z"
-      android:fillColor="#11FB1A"/>
+      android:fillColor="@color/blue_800"/>
 </vector>
