--- a/app/src/main/res/drawable/school.xml
+++ b/app/src/main/res/drawable/school.xml
@@ -1,18 +1,18 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="800dp"
-    android:height="800dp"
+    android:width="200dp"
+    android:height="200dp"
     android:viewportWidth="512"
     android:viewportHeight="512">
   <path
       android:pathData="M340.54,36.32H17.86C8,36.32 0,44.31 0,54.18v403.65c0,9.86 8,17.86 17.86,17.86H340.54c9.86,0 17.86,-8 17.86,-17.86V54.18C358.4,44.31 350.4,36.32 340.54,36.32zM133.36,145.86h92.4c9.17,0 17.21,6.72 18.22,15.83c1.19,10.77 -7.21,19.89 -17.75,19.89h-92.4c-9.17,0 -17.21,-6.72 -18.22,-15.83C114.42,154.98 122.82,145.86 133.36,145.86zM266.72,367.33H93.34c-9.17,0 -17.21,-6.72 -18.22,-15.83c-1.19,-10.77 7.22,-19.89 17.75,-19.89h173.37c9.17,0 17.21,6.72 18.22,15.83C285.65,358.21 277.25,367.33 266.72,367.33zM266.72,274.46H93.34c-9.17,0 -17.21,-6.72 -18.22,-15.83c-1.19,-10.77 7.22,-19.89 17.75,-19.89h173.37c9.17,0 17.21,6.72 18.22,15.83C285.65,265.34 277.25,274.46 266.72,274.46z"
-      android:fillColor="#11FB1A"/>
+      android:fillColor="@color/blue_800"/>
   <path
       android:pathData="M506.05,133.95h-98.83c-3.29,0 -5.95,2.67 -5.95,5.95V332.8c0,3.29 2.67,5.95 5.95,5.95h98.83c3.29,0 5.95,-2.67 5.95,-5.95V139.91C512,136.62 509.33,133.95 506.05,133.95z"
-      android:fillColor="#11FB1A"/>
+      android:fillColor="@color/blue_800"/>
   <path
       android:pathData="M494.14,36.32h-75.01c-9.86,0 -17.86,8 -17.86,17.86v38.1c0,3.29 2.67,5.95 5.95,5.95h98.83c3.29,0 5.95,-2.67 5.95,-5.95V54.18C512,44.31 504,36.32 494.14,36.32z"
-      android:fillColor="#FF1493"/>
+      android:fillColor="@color/blue_800"/>
   <path
       android:pathData="M497.28,374.47h-81.01c-4.23,0 -7.11,4.29 -5.51,8.2l29.48,72.26c6.03,14.77 27.04,14.79 33.07,0l29.48,-72.26C504.39,378.76 501.51,374.47 497.28,374.47z"
-      android:fillColor="#11FB1A"/>
+      android:fillColor="@color/blue_800"/>
 </vector>
