--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -10,13 +10,13 @@
     <com.google.android.material.appbar.AppBarLayout
             android:layout_height="wrap_content"
             android:layout_width="match_parent"
-            android:theme="@style/Theme.SportQuiz.AppBarOverlay">
+            android:theme="@style/Theme.SportQuiz">
 
         <androidx.appcompat.widget.Toolbar
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
                 android:background="?attr/colorPrimary"
-                app:popupTheme="@style/Theme.SportQuiz.PopupOverlay"
+                app:popupTheme="@style/Theme.SportQuiz"
                 android:layout_height="?attr/actionBarSize">
             <LinearLayout android:layout_width="match_parent"
                           android:layout_height="wrap_content"
@@ -29,33 +29,47 @@
                 <TextView
                         android:text="0"
                         android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" android:id="@+id/textViewRight"
+                        android:layout_height="wrap_content"
+                        android:id="@+id/textViewRight"
                         android:layout_marginStart="5dp"
-                        android:layout_marginEnd="10dp" android:textSize="16sp"
+                        android:layout_marginEnd="10dp"
+                        android:textSize="16sp"
                         android:textStyle="bold"/>
                 <ImageView
                         android:layout_width="30dp"
                         android:layout_height="30dp"
                         android:id="@+id/imageViewVik"
-                        tools:ignore="MissingConstraints"/>
+                        tools:ignore="MissingConstraints"
+                        android:contentDescription="@string/todo"/>
             </LinearLayout>
         </androidx.appcompat.widget.Toolbar>
 
     </com.google.android.material.appbar.AppBarLayout>
 
     <include layout="@layout/content_main"/>
-    <FrameLayout android:layout_width="match_parent"
-                 android:layout_marginBottom="10dp"
-                 android:layout_gravity="bottom|end"
-                 android:layout_height="100dp">
-        <ImageView android:layout_width="100dp"
-                   android:layout_height="match_parent"
-                   android:id="@+id/img_fairies"
-                   android:layout_marginStart="10dp"
-                   android:src="@drawable/logo_victorinka"
-                   android:contentDescription="@string/todo"/>
-    </FrameLayout>
-
+        <FrameLayout android:layout_width="match_parent"
+                     android:layout_marginBottom="10dp"
+                     android:layout_gravity="bottom|end"
+                     android:layout_height="100dp">
+            <ProgressBar android:layout_width="100dp"
+                         android:layout_height="100dp"
+                         android:id="@+id/progressBar"
+                         style="@style/Widget.AppCompat.ProgressBar.Horizontal"
+                         android:max="100"
+                         android:progress="50"
+                         android:progressDrawable="@drawable/progress_bar_bg"
+                         android:secondaryProgress="100"
+                         android:layout_marginStart="10dp"
+                         android:indeterminate="false"
+                         android:padding="5dp"/>
+            <ImageView android:layout_width="100dp"
+                       android:layout_height="100dp"
+                       android:id="@+id/img_fairies"
+                       android:layout_marginStart="10dp"
+                       android:src="@drawable/logo_victorinka"
+                       android:padding="10dp"
+                       android:contentDescription="@string/todo"/>
+        </FrameLayout>
 <!--
     <com.google.android.material.floatingactionbutton.FloatingActionButton
             android:id="@+id/fab"
