--- a/app/src/main/res/layout/fragment_of_the_game.xml
+++ b/app/src/main/res/layout/fragment_of_the_game.xml
@@ -9,6 +9,13 @@
               android:padding="10dp"
 >
 
+    <ImageView
+            android:src="@drawable/finish"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/imageViewFinish"
+            android:contentDescription="@string/todo"
+    android:visibility="gone"/>
     <LinearLayout
             android:id="@+id/linearLayoutGame"
             android:layout_width="wrap_content"
@@ -177,4 +184,12 @@
                     android:textStyle="bold"/>
         </LinearLayout>
     </LinearLayout>
+    <ImageView android:layout_width="100dp"
+               android:layout_height="100dp"
+               android:id="@+id/img_hint"
+               android:src="@drawable/hint"
+               android:layout_marginEnd="10dp"
+               android:padding="10dp"
+               android:contentDescription="@string/todo"
+               android:visibility="gone"/>
 </LinearLayout>
