--- a/app/src/main/res/layout/fragment_traffic_laws.xml
+++ b/app/src/main/res/layout/fragment_traffic_laws.xml
@@ -1,17 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
               android:orientation="vertical"
-             tools:context=".ui.traffic_laws.FragmentTrafficLaws"
->
+              tools:context=".ui.traffic_laws.FragmentTrafficLaws"
+              android:gravity="center">
     <ImageView
             android:src="@drawable/pdd_img"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:id="@+id/imageViewPdd"
             android:contentDescription="@string/todo"/>
+    <Button android:text="@string/start"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/btnStartPdd"
+            android:layout_margin="30dp"
+            android:background="@drawable/button_lihguistics"
+            android:contentDescription="@string/todo"
+            android:elevation="15dp"
+            android:scaleType="fitCenter"/>
     <FrameLayout android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:id="@+id/frameLayoutTrafficLaws"
