--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,25 +1,22 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
-    <!-- Base application theme. -->
     <style name="Theme.SportQuiz" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Primary brand color. -->
-        <item name="colorPrimary">@color/purple_500</item>
-        <item name="colorPrimaryDark">@color/purple_700</item>
-        <item name="colorAccent">@color/teal_200</item>
+        <item name="colorPrimary">@color/blue_600</item>
+        <item name="colorPrimaryDark">@color/blue_800</item>
+        <item name="colorAccent">@color/blue_200</item>
         <item name="drawerArrowStyle">@style/DrawerArrowStyle</item>
-        <!-- Customize your theme here. -->
     </style>
     <style name="Theme.SportQuiz.NoActionBar">
         <item name="windowActionBar">false</item>
         <item name="windowNoTitle">true</item>
     </style>
     <style name="Theme.SportQuiz.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar"/>
+
     <style name="Theme.SportQuiz.PopupOverlay" parent="ThemeOverlay.AppCompat.Light"/>
 
     <style name="CustomAnimationButton" parent="@style/Widget.AppCompat.Button">
-
         <item name="background">@drawable/button</item>
-        <item name="colorButtonNormal">#1a237e</item>
-        <item name="colorControlHighlight">#673ab7</item>
+        <item name="colorButtonNormal">@color/blue_800</item>
+        <item name="colorControlHighlight">@color/blue_600</item>
         <item name="android:stateListAnimator">@animator/button_animator</item>
     </style>
 
@@ -28,4 +25,11 @@
         <item name="color">@android:color/white</item>
     </style>
 
+    <style name="AppTheme" parent="Theme.AppCompat.DayNight">
+        <item name="colorPrimary">@color/blue_600</item>
+        <item name="colorPrimaryDark">@color/blue_800</item>
+        <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:textColorPrimary">@android:color/white</item>
+        <item name="android:textColorSecondary">@android:color/white</item>
+    </style>
 </resources>
