--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -25,9 +25,10 @@
                           android:paddingRight="5dp"
                           android:paddingLeft="5dp"
                           android:layout_marginStart="100dp"
-                          android:layout_marginEnd="10dp">
+                          android:layout_marginEnd="10dp"
+                          tools:ignore="UseCompoundDrawables">
                 <TextView
-                        android:text="0"
+                        android:text="@string/zero"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:id="@+id/textViewRight"
