--- a/app/src/main/res/layout/fragment_dialog_buy.xml
+++ b/app/src/main/res/layout/fragment_dialog_buy.xml
@@ -28,7 +28,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_margin="20dp"
-                android:text="@string/message_text"
+                android:text="@string/message"
                 android:textAppearance="?android:attr/textAppearanceLarge"
                 android:gravity="center_horizontal">
         </TextView>
