--- a/app/src/main/res/layout/fragment_of_the_game.xml
+++ b/app/src/main/res/layout/fragment_of_the_game.xml
@@ -38,7 +38,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginStart="5dp"
-                android:text="@string/_00"
+                android:text="@string/zero_zero"
                 android:textColor="@color/black"
                 android:textSize="24sp"
                 android:textStyle="bold"
@@ -81,7 +81,7 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp"
                     android:background="@drawable/check_box"
-                    android:elevation="10dp"
+                    android:elevation="5dp"
                     android:padding="8dp"
                     android:minHeight="48dp"/>
         </LinearLayout>
@@ -102,7 +102,7 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp"
                     android:background="@drawable/check_box"
-                    android:elevation="10dp"
+                    android:elevation="5dp"
                     android:padding="8dp"
                     android:minHeight="48dp"/>
         </LinearLayout>
@@ -123,7 +123,7 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp"
                     android:background="@drawable/check_box"
-                    android:elevation="10dp"
+                    android:elevation="5dp"
                     android:padding="8dp" android:minHeight="48dp"/>
         </LinearLayout>
 
@@ -143,7 +143,7 @@
                     android:layout_height="wrap_content"
                     android:layout_margin="10dp"
                     android:background="@drawable/check_box"
-                    android:elevation="10dp"
+                    android:elevation="5dp"
                     android:padding="8dp" android:minHeight="48dp"/>
         </LinearLayout>
 
