--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -12,7 +12,7 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:contentDescription="@string/nav_header_desc"
-            android:id="@+id/imageView"
+            android:id="@+id/imageViewAwatar"
             app:srcCompat="@drawable/owl" android:layout_margin="10dp"
     />
     <LinearLayout
