--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -18,6 +18,7 @@
             app:layout_constraintRight_toRightOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:defaultNavHost="true"
-            app:navGraph="@navigation/mobile_navigation" app:layout_constraintBottom_toBottomOf="parent"
+            app:navGraph="@navigation/mobile_navigation"
+            app:layout_constraintBottom_toBottomOf="parent"
             android:visibility="visible"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
