--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -13,7 +13,8 @@
             android:layout_height="100dp"
             android:contentDescription="@string/nav_header_desc"
             android:id="@+id/imageViewAwatar"
-            app:srcCompat="@drawable/owl" android:layout_margin="10dp"
+            app:srcCompat="@drawable/owl"
+            android:layout_margin="10dp"
     />
     <LinearLayout
             android:orientation="vertical"
